--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,6 @@
         android:id="@+id/textViewPassengerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/colorPrimary"
         app:layout_constraintLeft_toLeftOf="@id/textViewPassengerLabel"
@@ -77,12 +76,13 @@
         app:srcCompat="@android:drawable/divider_horizontal_dark" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewOrigin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="@+id/divider"
         app:layout_constraintEnd_toStartOf="@+id/divider"
         app:layout_constraintStart_toStartOf="@+id/rightRectangle"
@@ -90,13 +90,14 @@
         android:text="@string/origin_code" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textViewDetination"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:text="@string/destination_code"
+            android:textColor="@android:color/black"
             app:layout_constraintBottom_toBottomOf="@+id/divider"
             app:layout_constraintEnd_toEndOf="@+id/leftRectangle"
             app:layout_constraintStart_toEndOf="@+id/divider"
@@ -118,6 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="@+id/boardingTextView"
         app:layout_constraintTop_toBottomOf="@+id/boardingTextView"
         android:text="@string/boarding_time" />
@@ -136,6 +138,7 @@
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginTop="8dp"
+        android:textColor="@color/colorGood"
         app:layout_constraintStart_toStartOf="@+id/departureTextView"
         app:layout_constraintTop_toBottomOf="@+id/departureTextView"
         android:text="@string/departure_time" />
@@ -155,6 +158,7 @@
         android:layout_width="36dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textColor="@android:color/holo_red_dark"
         app:layout_constraintStart_toStartOf="@+id/boardingInLabel"
         app:layout_constraintTop_toBottomOf="@+id/boardingInLabel"
         android:text="@string/boarding_in_time" />
@@ -173,6 +177,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textColor="@color/colorGood"
         app:layout_constraintStart_toStartOf="@+id/arrivalTv"
         app:layout_constraintTop_toBottomOf="@+id/arrivalTv"
         android:text="@string/arrival_time" />
@@ -194,7 +199,7 @@
         <ImageView
             android:id="@+id/tableImage"
             android:layout_width="0dp"
-            android:layout_height="33dp"
+            android:layout_height="60dp"
             android:background="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="@+id/tableHeaderImage"
             app:layout_constraintStart_toStartOf="@+id/tableHeaderImage"
@@ -202,90 +207,98 @@
             app:srcCompat="@drawable/shape_rectangle_stroke" />
 
         <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
+            android:id="@+id/terminalLabelTV"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="8dp"
-            android:text="TextView"
+
+            android:text="TERMINAL"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintBottom_toTopOf="@+id/tableImage"
             app:layout_constraintLeft_toLeftOf="@+id/tableImage"
             app:layout_constraintStart_toStartOf="@+id/tableHeaderImage"
-            app:layout_constraintTop_toTopOf="@+id/textView12" />
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="58dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/tableImage"
-            app:layout_constraintEnd_toStartOf="@+id/textView13"
-            app:layout_constraintStart_toEndOf="@+id/textView11"
             app:layout_constraintTop_toTopOf="@+id/tableHeaderImage" />
 
         <TextView
-            android:id="@+id/textView13"
-            android:layout_width="58dp"
+            android:id="@+id/textViewGateLabel"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="@+id/textView12"
+            android:text="GATE"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintBottom_toTopOf="@+id/tableImage"
+            app:layout_constraintEnd_toStartOf="@+id/textViewSeatLabel"
+            app:layout_constraintStart_toEndOf="@+id/terminalLabelTV"
+            app:layout_constraintTop_toTopOf="@+id/tableHeaderImage" />
+
+        <TextView
+            android:id="@+id/textViewSeatLabel"
+            android:layout_width="120dp"
+            android:layout_height="0dp"
+            android:text="SEAT"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintBottom_toTopOf="@+id/tableImage"
             app:layout_constraintEnd_toEndOf="@+id/tableHeaderImage"
             app:layout_constraintTop_toTopOf="@+id/tableHeaderImage" />
 
         <TextView
-            android:id="@+id/textView14"
-            android:layout_width="wrap_content"
+            android:id="@+id/textViewTerminal"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="@+id/textView15"
-            app:layout_constraintStart_toStartOf="@+id/tableImage"
-            app:layout_constraintTop_toTopOf="@+id/textView15" />
-
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="@+id/tableImage"
-            app:layout_constraintEnd_toStartOf="@+id/textView16"
-            app:layout_constraintStart_toEndOf="@+id/textView14"
+            android:text="2"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/tableImage"
+            app:layout_constraintRight_toRightOf="@+id/tableImage"
             app:layout_constraintTop_toTopOf="@+id/tableImage" />
 
         <TextView
-            android:id="@+id/textView16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/textViewGate"
+            android:layout_width="120dp"
+            android:layout_height="0dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="TextView"
+            android:layout_marginStart="8dp"
+            android:text="52B"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="@+id/tableImage"
+            app:layout_constraintEnd_toStartOf="@+id/textViewSeat"
+            app:layout_constraintStart_toEndOf="@+id/textViewTerminal"
+            app:layout_constraintTop_toTopOf="@+id/tableImage" />
+
+        <TextView
+            android:id="@+id/textViewSeat"
+            android:layout_width="120dp"
+            android:layout_height="0dp"
+            android:text="24A"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="@+id/tableImage"
             app:layout_constraintEnd_toEndOf="@+id/tableImage"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tableImage" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="50dp"
-        android:layout_height="42dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@mipmap/barcode"
-        app:layout_constraintTop_toBottomOf="@+id/tableImage"
-        app:srcCompat="@drawable/shape_rectangle_stroke" />
+        <ImageView
+            android:id="@+id/barCodeImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@mipmap/barcode"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tableImage"
+            app:srcCompat="@drawable/shape_rectangle_stroke" />
 
         <TextView
-            android:id="@+id/textView17"
+            android:id="@+id/textViewFlightNumber"
             android:layout_width="113dp"
             android:layout_height="44dp"
             android:layout_marginEnd="8dp"
@@ -303,7 +316,7 @@
             app:layout_constraintTop_toBottomOf="@+id/divider" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imagePlanePicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
