--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,7 +9,8 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <ScrollView
+   <ScrollView
+
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -53,109 +54,122 @@
                  (5) Add an include tag in activity_main to include flightInfo in the right position
             -->
             <include
-               layout="@layout/flight_info"
                 android:id="@+id/flight_info"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewPassengerName"
-                android:layout_marginTop="16dp"
+                layout="@layout/flight_info"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintRight_toRightOf="parent"
-                 />
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/textViewBoardingInTimeLabel"
+                app:layout_constraintStart_toEndOf="@+id/textViewBoardingTime"
+                app:layout_constraintTop_toBottomOf="@+id/textViewPassengerName" />
 
             <TextView
                 android:id="@+id/textViewBoardingTimeLabel"
-                android:text="@string/boarding_time_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:letterSpacing="0.3"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/flight_info"
-                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp" />
+                app:layout_constraintTop_toTopOf="@id/flight_info"
+                android:letterSpacing="0.3"
+                android:text="@string/boarding_time_label"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewPassengerName" />
 
 
             <TextView
                 android:id="@+id/textViewBoardingTime"
-                tools:text="@string/boarding_time"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textColor="@android:color/black"
-                app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingTimeLabel"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTimeLabel" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTimeLabel"
+                tools:text="@string/boarding_time" />
 
 
             <TextView
                 android:id="@+id/textViewDepartureTimeLabel"
-                android:text="@string/departure_time_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:text="@string/departure_time_label"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:letterSpacing="0.3"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTime"
-                app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingTime" />
+                app:layout_constraintBaseline_toBaselineOf="@+id/textViewArrivalTimeLabel"
+
+                app:layout_constraintLeft_toRightOf="parent" />
 
 
             <TextView
                 android:id="@+id/textViewDepartureTime"
-                tools:text="@string/departure_time"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textColor="@color/colorGood"
-                app:layout_constraintLeft_toLeftOf="@+id/textViewDepartureTimeLabel"
-                app:layout_constraintTop_toBottomOf="@+id/textViewDepartureTimeLabel" />
+                app:layout_constraintBaseline_toBaselineOf="@+id/textViewDepartureTimeLabel"
+                app:layout_constraintStart_toEndOf="@id/textViewDepartureTimeLabel"
+                tools:text="@string/departure_time" />
 
 
             <TextView
                 android:id="@+id/textViewBoardingInTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="56dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginRight="16dp"
                 android:letterSpacing="0.3"
                 android:text="@string/boarding_in_label"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/flight_info" />
+                app:layout_constraintTop_toTopOf="@id/flight_info" />
 
 
             <TextView
                 android:id="@+id/textViewBoardingInCountdown"
-                tools:text="@string/boarding_in_time"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textColor="@color/colorBad"
-                app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingInTimeLabel"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInTimeLabel" />
+                app:layout_constraintBaseline_toBaselineOf="@+id/textViewBoardingTime"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+                tools:text="@string/boarding_in_time" />
 
 
             <TextView
                 android:id="@+id/textViewArrivalTimeLabel"
-                android:text="@string/arrival_time_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:text="@string/arrival_time_label"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:letterSpacing="0.3"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInCountdown"
-                app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingInCountdown"
-                android:layout_marginTop="8dp"/>
+                app:layout_constraintBaseline_toBaselineOf="@+id/textViewArrivalTime"
+                app:layout_constraintEnd_toStartOf="@+id/textViewArrivalTime" />
 
 
             <TextView
                 android:id="@+id/textViewArrivalTime"
-                tools:text="@string/arrival_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="4dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textColor="@color/colorGood"
-                app:layout_constraintLeft_toLeftOf="@+id/textViewArrivalTimeLabel"
-                app:layout_constraintTop_toBottomOf="@+id/textViewArrivalTimeLabel" />
+                app:layout_constraintEnd_toStartOf="@id/barcode"
+                app:layout_constraintTop_toBottomOf="@+id/flight_info"
+                tools:text="@string/arrival_time" />
 
             <!--
                  (4) Move all Views in the boarding information table from activity_main to boarding_info
@@ -166,25 +180,27 @@
                 layout="@layout/boarding_table"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintEnd_toStartOf="@+id/barcode"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewDepartureTime" />
-
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewArrivalTime" />
 
             <ImageView
                 android:id="@+id/barcode"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/boarding_table"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/boarding_table"
+                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@mipmap/barcode" />
 
         </android.support.constraint.ConstraintLayout>
-    </ScrollView>
+   </ScrollView>
 </layout>
